syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service KeyManagerService {
  rpc cadastroChave (KeyManagerRequest) returns (KeyManagerResponse) {}
  rpc deletarChave  (DeleteKeyRequest)  returns (DeleteKeyResponse) {}
}

service KeyManagerConsultaService {
  rpc consultaChavePix (ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
  rpc consultaChavesPixCliente (ConsultaChavesPixClienteRequest) returns (ConsultaChavesPixClienteResponse) {}
}

message DetalheError{
  int32 codigo = 1;
  string mensagem = 2;
}

enum TipoConta{
  DESCONHECIDA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

enum TipoChave{
  NAO_IDENTIFICADO = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

message KeyManagerRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message KeyManagerResponse {
  string idPix = 1;
}

message DeleteKeyRequest {
  string idPix = 1;
  string clienteId = 2;
}

message DeleteKeyResponse {
  string idPix = 1;
  string clienteId = 2;
}

message IdPixConsulta{
  string clienteId = 1;
  string idPix = 2;
}

message ConsultaChavePixRequest{
  IdPixConsulta idPix = 1;
  string chave = 2;
}

message DadosConta{
  string instituicao = 1;
  string agencia =  2;
  string numero = 3;
  TipoConta tipoConta = 4;
}
message ConsultaChavePixResponse{
  string idPix = 1;
  string clienteId = 2;
  TipoChave tipoChave = 3;
  string chave = 4;
  string nomeTitular = 5;
  string cpfTitular = 6;
  DadosConta dadosConta = 7;
  google.protobuf.Timestamp criadaEm = 9;
}

message ConsultaChavesPixClienteRequest{
  string clienteId = 1;
}

message ConsultaChavesPixClienteResponse{
  message ChavePixDetalhe{
    string idPix = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }
  string clienteId = 1;
  repeated ChavePixDetalhe listaChavePix = 2;
}